# buildlang

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  NOTICE  README.md  ROADMAP.md  ROADMAP_2026_2027.md  ROADMAP_2027_2028.md  ROADMAP_GRAPHICS.md  ROADMAP_VISION.md  SELF_HOSTING_PROGRESS.md  SPECIFICATION.md  STATUS.md  TEST_RESULTS.md  USAGE.md  build_test.bat
.github/: dependabot.yml
buildlang/: ASPIRATIONAL.md  Build.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE-APACHE  README.md  RELEASE_CHECKLIST.md  STATUS.md  build.sh
compiler/: Cargo.toml  README.md
compiler/benches/: lexer_benchmark.rs
compiler/examples/: gen_triangle.rs
compiler/src/: bdf.rs  gpu_receipt.rs  lib.rs  lsp_dispatch.rs  main.rs  memory_layout.rs  mir_representation.rs  module_graph.rs  scientific_runtime.rs  serde_float.rs  symbol_graph.rs  units.rs
compiler/src/ast/: expr.rs  item.rs  mod.rs  operators.rs  pattern.rs  stmt.rs  ty.rs
compiler/src/bdf/: flagship.rs  json.rs
compiler/src/codegen/: builder.rs  debug.rs  ir.rs  mod.rs  runtime.rs
compiler/src/codegen/analysis/: cfg.rs  drops.rs  linear.rs  liveness.rs  mod.rs  structured_cfg.rs
compiler/src/codegen/backend/: STATUS.md  arm64.rs  arm64_enc.rs  c.rs  glsl.rs  hlsl.rs  llvm.rs  mod.rs  rust.rs  spirv.rs  wasm.rs  x86_64.rs  x86_64_enc.rs
compiler/src/codegen/backend/snapshots/: buildlang__codegen__backend__c__tests__snapshot_arithmetic.snap  buildlang__codegen__backend__c__tests__snapshot_hello.snap  buildlang__codegen__backend__c__tests__snapshot_if_else.snap  buildlang__codegen__backend__c__tests__snapshot_recursion.snap  buildlang__codegen__backend__c__tests__snapshot_struct.snap  quantalang__codegen__backend__c__tests__snapshot_arithmetic.snap  quantalang__codegen__backend__c__tests__snapshot_hello.snap  quantalang__codegen__backend__c__tests__snapshot_if_else.snap  quantalang__codegen__backend__c__tests__snapshot_recursion.snap  quantalang__codegen__backend__c__tests__snapshot_struct.snap
compiler/src/codegen/lower/: expr.rs  macros.rs  mod.rs  tests.rs  types.rs
compiler/src/fmt/: config.rs  formatter.rs  mod.rs  pretty.rs
compiler/src/gpu/: mod.rs  vulkan_host.rs
compiler/src/lexer/: cursor.rs  error.rs  mod.rs  scanner.rs  span.rs  token.rs
compiler/src/lsp/: STATUS.md  actions.rs  completion.rs  definition.rs  diagnostics.rs  document.rs  hover.rs  jsonrpc.rs  message.rs  mod.rs  raw_params.rs  response_json.rs  semantic_tokens.rs  server.rs  symbols.rs  transport.rs  types.rs  workspace_index.rs
compiler/src/lsp/semantic_tokens/: classify.rs  scan.rs  tests.rs
compiler/src/lsp_dispatch/: fixture.rs  model.rs  observe.rs  tests.rs  validate.rs
compiler/src/macro_expand/: builtins.rs  expand.rs  hygiene.rs  mod.rs  pattern.rs
compiler/src/module_graph/: model.rs  tests.rs  util.rs  validate.rs
compiler/src/parser/: error.rs  expr.rs  item.rs  mod.rs  pattern.rs  stmt.rs  ty.rs
compiler/src/pkg/: lockfile.rs  manifest.rs  mod.rs  registry.rs  resolver.rs  version.rs
compiler/src/runtime/: STATUS.md  async_rt.rs  ffi.rs  gc.rs  mod.rs
compiler/src/symbol_graph/: collect.rs  model.rs  validate.rs
compiler/src/symbol_graph/collect/: edge.rs  effect.rs  source.rs  source_nested.rs
compiler/src/types/: builtins.rs  capabilities.rs  check.rs  const_generics.rs  context.rs  dispatch.rs  effects.rs  error.rs  hkt.rs  infer.rs  mod.rs  traits.rs  ty.rs  unify.rs
compiler/tests/: cli.rs  gpu.rs
compiler/tests/lexer/: mod.rs
compiler/tests/mem/: multi_block_loop.bld
compiler/tests/parser/: mod.rs
demos/: BuildCinematic.fx  BuildToneMap.fx  QuantaCinematic.fx  QuantaToneMap.fx  README.md  ambient_occlusion.bld  bloom.bld  bloom.hlsl  blur_shader.bld  blur_shader.fx  blur_shader.quanta  chromatic_aberration.bld  chromatic_aberration.hlsl  cinematic.bld  cinematic.c  cinematic.fx  cinematic_uniforms.bld  cinematic_uniforms.fx  color_grading.bld  color_grading.fx  depth_of_field.bld  dump_shaders.rs  edge_detect.bld  edge_detect.fx  edge_detect.quanta  film_grain.bld  film_grain.hlsl  frag.bld  frag.quanta  reshade_tonemap.bld  reshade_tonemap.fx  shader_data.h  ssao.bld  ssao.fx  ssao.quanta  tonemap.hlsl  triangle_fragment.bld  triangle_fragment.quanta  triangle_vertex.bld  triangle_vertex.quanta  (+10 more)
docs/: COMPILER_WIND_DOWN_ASSESSMENT_2026-06-15.md  DIMENSIONAL-ANALYSIS.md  EFFECTS_GUIDE.md  FINSEC-BLOCKCHAIN-HOST.md  GETTING_STARTED.md  INTRODUCTION.md  LINEAR-TYPES.md  MATH-SYNTAX.md  MEMORY-PILLAR-DESIGN.md  MULTIPLE-DISPATCH.md  PACKAGES.md  QUANTUM-HOST.md  SCIENTIFIC-RECEIPT.md  SHADER_GUIDE.md  UNIVERSAL_SUBSTRATE_DIRECTIVE_2026-06-29.md  UNIVERSAL_SUBSTRATE_DIRECTIVE_2026-06-30.md  getting-started.md  index.html  styles.css  tutorial.md  tutorial_effects_calculator.md
examples/: born_rule_leaky.bld  born_rule_normalization.bld  bounded_oscillation.bld  bounded_overshoot.bld  conservation_decay.bld  conservation_rotation.bld  energy_identity.bld  energy_identity_broken.bld  euler_oscillator.bld  funnel_probe.bld  funnel_probe_linear.bld  heat_equation_energy.bld  heat_equation_energy_unstable.bld  reaction_atom_balance.bld  reaction_atom_balance_broken.bld  relation_double_angle.bld  relation_double_angle_broken.bld  scientific-corpus.json  search_bound_binary.bld  search_bound_linear.bld  symplectic_oscillator.bld
future/: README.md
quantalang/: ASPIRATIONAL.md  Quanta.toml  README.md  RELEASE_CHECKLIST.md  STATUS.md
registry/: index.json
runtime/: vulkan_host.c
semantic-corpus/: README.md  manifest.json
stdlib/: algorithms.bld  algorithms.c  bitwise.bld  bitwise.c  effects.bld  graphics.bld  io.bld  iter.bld  linalg.bld  math.bld  option.bld  sorting.bld  sorting.c  sorting.quanta  string_utils.bld  strings.bld
tests/: cross_target.sh  cross_target_test.c  cross_target_test.glsl  cross_target_test.hlsl  run_tests.sh  self_hosted_compiler.bld  self_hosted_compiler.quanta  self_hosted_compiler_v2.bld  self_hosted_compiler_v2.quanta  self_hosted_compiler_v3.bld  self_hosted_compiler_v3.quanta  self_hosted_compiler_v4.bld  (+13 more)
(+970 files in other folders)
