# ===============================================================================
# BUILDLANG COMPILER
# "The Language That Evolves"
# ===============================================================================
# Copyright (c) 2022-2026 Zain Dana Harper. MIT License.
# ===============================================================================

[package]
name = "buildlang"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["Zain Dana Harper"]
description = "Effects-oriented compiler with a verified C path, shader output, and experimental backend research"
license-file = "../LICENSE"
repository = "https://github.com/HarperZ9/buildlang"
homepage = "https://github.com/HarperZ9/buildlang"
documentation = "https://github.com/HarperZ9/buildlang#readme"
readme = "../README.md"
keywords = ["compiler", "language", "effects", "shaders", "systems"]
categories = ["compilers", "development-tools", "graphics"]

[lib]
name = "buildlang"
path = "src/lib.rs"

[[bin]]
name = "buildc"
path = "src/main.rs"

[dependencies]
# Unicode support
unicode-xid = "0.2"
unicode-normalization = "0.1"

# Error handling
thiserror = "2.0"
miette = { version = "7.0", features = ["fancy"] }

# Data structures
indexmap = "2.0"
rustc-hash = "2.0"
bumpalo = "3.14"

# String interning
string-interner = "0.20"

# CLI (for binary)
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"

[dev-dependencies]
criterion = "0.8"
proptest = "1.11.0"
pretty_assertions = "1.4"
insta = { version = "1.34", features = ["json"] }

[[bench]]
name = "lexer_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
debug = true

[lints.clippy]
# Allow in compiler code; these are noisy without safety benefit.
too_many_arguments = "allow"
module_inception = "allow"
