# ===============================================================================
# BUILDLANG COMPILER
# "The Language That Evolves"
# ===============================================================================
# Copyright (c) 2022-2026 Zain Dana Harper. MIT License.
# ===============================================================================

[package]
name = "buildlang"
version = "1.0.1"
edition = "2021"
rust-version = "1.70"
authors = ["Zain Dana Harper"]
description = "BuildLang (buildc): an effects-oriented compiler with a verified C path, shader output, experimental backends, and opt-in linear types"
license = "MIT"
repository = "https://github.com/HarperZ9/quantalang"
homepage = "https://harperz9.github.io/buildlang.html"
documentation = "https://docs.rs/buildlang"
readme = "README.md"
keywords = ["compiler", "language", "effects", "shaders", "systems"]
categories = ["compilers", "development-tools", "graphics"]

[lib]
name = "buildlang"
path = "src/lib.rs"

[[bin]]
name = "buildc"
path = "src/main.rs"

[dependencies]
# Unicode support
unicode-xid = "0.2"
unicode-normalization = "0.1"

# Error handling
thiserror = "2.0"
miette = { version = "7.0", features = ["fancy"] }

# Data structures
indexmap = { version = "2.0", features = ["serde"] }
rustc-hash = "2.0"
bumpalo = "3.14"

# String interning
string-interner = "0.20"

# CLI (for binary)
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha2 = "0.11"

[dev-dependencies]
criterion = "0.8"
proptest = "1.11.0"
pretty_assertions = "1.4"
insta = { version = "1.34", features = ["json"] }

[[bench]]
name = "lexer_benchmark"
harness = false

# Integration test suites that live in subdirectories of tests/ are not
# auto-discovered by Cargo, so wire them explicitly.
[[test]]
name = "parser"
path = "tests/parser/mod.rs"

[[test]]
name = "lexer"
path = "tests/lexer/mod.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
debug = true

[lints.clippy]
# Allow in compiler code; these are noisy without safety benefit.
too_many_arguments = "allow"
module_inception = "allow"
