# ===============================================================================
# BUILDLANG COMPILER
# "The Language That Evolves"
# ===============================================================================
# Copyright (c) 2022-2026 Zain Dana Harper. BuildLang Fair-Source License v1.0 (see LICENSE).
# ===============================================================================

[package]
name = "buildlang"
version = "1.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["Zain Dana Harper"]
description = "BuildLang (buildc): an effects-oriented compiler with a verified C path, shader output, experimental backends, opt-in linear types, and re-checkable accountability + scientific-runtime receipts"
license-file = "LICENSE"
repository = "https://github.com/HarperZ9/buildlang"
homepage = "https://harperz9.github.io/buildlang.html"
documentation = "https://docs.rs/buildlang"
readme = "README.md"
keywords = ["compiler", "language", "effects", "shaders", "systems"]
categories = ["compilers", "development-tools", "graphics"]

[lib]
name = "buildlang"
path = "src/lib.rs"

[[bin]]
name = "buildc"
path = "src/main.rs"

[dependencies]
# Unicode support
unicode-xid = "0.2"
unicode-normalization = "0.1"

# Error handling
thiserror = "2.0"
miette = { version = "7.0", features = ["fancy"] }

# Data structures
indexmap = { version = "2.0", features = ["serde"] }
rustc-hash = "2.0"
bumpalo = "3.14"

# String interning
string-interner = "0.20"

# CLI (for binary)
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
# `float_roundtrip`: parse f64 back to the EXACT bits the shortest-form serializer
# emitted. Without it serde_json's fast parser is up to 1 ULP off, so a receipt
# sealed over its in-memory f64 series does not re-seal after a disk round-trip
# (breaking `receipt verify` for large-magnitude scientific-runtime series).
serde_json = { version = "1.0", features = ["float_roundtrip"] }
sha2 = "0.11"

# GPU device dispatch (Layer B/C) is OPTIONAL. `ash` is a thin, unsafe Vulkan
# binding with no build-time SDK requirement; it is pulled in ONLY under
# `--features gpu` and referenced solely behind `#[cfg(feature = "gpu")]`, so the
# default build stays zero-GPU-dependency and works with no Vulkan present.
ash = { version = "0.38", optional = true }

[features]
# The default build compiles the full Layer-A compute SPIR-V path (no device
# needed). `gpu` additionally compiles the ash-backed Vulkan host that dispatches
# on a physical device and cross-checks against the CPU-C reference.
default = []
gpu = ["dep:ash"]

[dev-dependencies]
criterion = "0.8"
proptest = "1.11.0"
pretty_assertions = "1.4"
insta = { version = "1.34", features = ["json"] }

[[bench]]
name = "lexer_benchmark"
harness = false

# Integration test suites that live in subdirectories of tests/ are not
# auto-discovered by Cargo, so wire them explicitly.
[[test]]
name = "parser"
path = "tests/parser/mod.rs"

[[test]]
name = "lexer"
path = "tests/lexer/mod.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
debug = true

[lints.clippy]
# Allow in compiler code; these are noisy without safety benefit.
too_many_arguments = "allow"
module_inception = "allow"
